<resources>
    <string name="welcome_description">SEJA BEM VINDO(A) AO</string>
    <string name="app_name">Kariti</string>
    <string name="app_name_capital_letter">KARITI</string>
    <string name="titleAttention">ATENÇÃO</string>
    <string name="titleGuidance">ORIENTAÇÃO</string>
    <string name="titleHelp">Ajuda</string>
    <string name="descriptionAll">Todos</string>
    <string name="to_go_back_description">Voltar</string>
    <string name="status_description"> Status </string>
    <string name="click_here_description">Clique aqui </string>
    <string name="create_account_description"> Criar conta </string>
    <string name="change_device_description">Mudar de dispositivo</string>
    <string name="if_change_device_description">Mudança de dipositivo? </string>
    <string name="yes_description">SIM</string>
    <string name="not_description">NÃO</string>
    <string name="descriptionExit">Sair</string>
    <string name="symbol_mais">+</string>
    <string name="symbol_menos">-</string>
    <string name="number_zero">0</string>
    <string name="okDescription">OK</string>
    <string name="optional_description">opcional</string>
    <string name="alterarDescription">Alterar</string>
    <string name="manterDescription">Manter</string>
    <string name="login_description">Login</string>
    <string name="forgot_password_description">Esqueci minha senha</string>
    <string name="enter_your_login_description">Informe seu e-mail*</string>
    <string name="enter_your_password_description">Informe sua senha*</string>
    <string name="enter_description">Entrar</string>
    <string name="register_description">Cadastrar</string>
    <string name="teacher_name_description">Nome do professor</string>
    <string name="view_description">Visualizar</string>
    <string name="cancel_description">Cancelar</string>
    <string name="language_portuguese">Português - Brasil (pt_br)</string>
    <string name="language_English">Inglês (en)</string>
    <string name="language_title">Selecione o idioma</string>
    <string name="selectDescription">Selecionar</string>
    <string name="titleDialogTeacher">Caro(a) professor(a)</string>
    <string name="user_name_obg">Nome Completo*</string>
    <string name="descriptionTeacher">Professor(a): %1$s</string>
    <string name="user_email_obg">E-mail*</string>
    <string name="user_email">E-mail</string>
    <string name="user_enter_your_email">Informe seu e-mail</string>
    <string name="password_registration">Informe uma senha*</string>
    <string name="password_login">Senha de acesso*</string>
    <string name="password_registration_check">Confirmar senha*</string>
    <string name="validation_description">Validar</string>
    <string name="resend_code_validation">Reenviar código</string>
    <string name="register_description_welcome">Cadastre-se</string>
    <string name="buttonDefaultPassword">Entrar sem senha</string>
    <string name="titleNewPassword">Nova Senha</string>
    <string name="new_password_description">Nova senha*</string>
    <string name="enter_your_new_password">Informe a nova senha*</string>
    <string name="buttonCadastroEscola">Cadastrar escola</string>
    <string name="titleAccessSchool">Acessar com:</string>
    <string name="buttonVisualizarEscolas">Visualizar Escolas</string>
    <string name="EditTextInfoEscola">Informe o nome da escola</string>
    <string name="nomeEscola">Nome da Escola</string>
    <string name="registerSchool">Cadastrar Escola</string>
    <string name="menuDelete">Excluir</string>
    <string name="menuActivate">Ativar</string>
    <string name="escolaArquivada">Escolas arquivadas</string>
    <string name="maisEscola">Mais Escolas</string>
    <string name="nomeSchool">Nome da Escola*</string>
    <string name="senhahint">********</string>
    <string name="selecionarEsc">Selecionar Escola</string>
    <string name="btnEscolaDesativada">Escolas desativadas</string>
    <string name="escolaTeste">Escola Teste</string>
    <string name="titleDisableSchool">Deseja desativar essa escola?</string>
    <string name="titleSchoolDeactivated">Escolas Desativadas</string>
    <string name="longTitleSchoolDelete">Deseja realmente excluir essa escola?</string>
    <string name="descriptionStudent">Aluno(a): %1$s</string>
    <string name="buttonCadStudent">Cadastrar aluno(a)</string>
    <string name="searchStudent">Pesquisar aluno</string>
    <string name="studentEmail">E-mail</string>
    <string name="editTextBuscAluno">Buscar Alunos</string>
    <string name="buscNameAlunoLupa">Lupa de pesquisa</string>
    <string name="textViewTotalStudents">Total de alunos: %1$d</string>
    <string name="btnSelectStudents"> Selecionar Alunos(a) >>> </string>
    <string name="btnIncluir">Incluir</string>
    <string name="textViewAlunoAnonim">Incluir Alunos Anônimos</string>
    <string name="btnIncluirAluno">Incluir Alunos</string>
    <string name="textViewStudent"> Aluno(a) </string>
    <string name="textViewStudents">Alunos (as)</string>
    <string name="textAnonymous">Aluno(a) %1$s</string>
    <string name="buttonEdit"> Editar </string>
    <string name="buttonApagar"> Apagar </string>
    <string name="buttonVisuAluno">Visualizar Aluno</string>
    <string name="EditTextIdAluno">ID do aluno</string>
    <string name="btnSave">Salvar</string>
    <string name="menuEditarAlun">Editar Aluno</string>
    <string name="menuExclAlun">Excluir Aluno</string>
    <string name="textViewClass">Turma</string>
    <string name="textViewTitle">Turmas</string>
    <string name="textViewTitleNewClass">Nova Turma</string>
    <string name="txtViewClass">Turma: %1$s</string>
    <string name="editTextNameClass">Nome da turma</string>
    <string name="editTextNomeTurma">Nome da Turma*</string>
    <string name="buttonCadTurma">Cadastrar Turma</string>
    <string name="buttonSaveClass">Salvar Turma</string>
    <string name="titleEditClass">Editar Turma</string>
    <string name="textViewFilter">Filtro por turma</string>
    <string name="buttonVisuTurma">Visualizar Turma</string>
    <string name="infoStudentsInClass">Alunos Identificados: %1$d \nAlunos Anônimos: %2$d \n\nTotal de Alunos: %3$d</string>
    <string name="textClassRegistered">turmas cadastrada</string>
    <string name="titleSelectClass">Selecione a Turma</string>
    <string name="textViewExam">Prova</string>
    <string name="textViewTitleExam">Prova: %1$s</string>
    <string name="textViewExams">Provas</string>
    <string name="textTitleQuickTest">Prova Rápida</string>
    <string name="titleNewExam">Nova Prova</string>
    <string name="buttonCadExam">Cadastrar Prova</string>
    <string name="btnDownloadCads">Baixar Cartão</string>
    <string name="titleDownloadCards">Cartões</string>
    <string name="buttonGenerateCard">Gerar Cartões</string>
    <string name="buttonGerarCartaoRap">Gerar Cartão</string>
    <string name="buttonCorrectionExam">Corrigir Prova</string>
    <string name="titleCaptureCard">Capturar Cartão</string>
    <string name="buttonViewExam">Visualizar Provas</string>
    <string name="titleCardGenerateSuccess">Cartão de resposta gerado com sucesso</string>
    <string name="textViewEditProva">Mais Opções </string>
    <string name="buttonDeviceFiles">Selecionar Imagens do Dispositivo</string>
    <string name="textInstrucao">Aqui você pode editar ou apagar uma prova!</string>
    <string name="textViewCalendar">Calendário</string>
    <string name="buttonCameraOpenCV">Capturar Agora</string>
    <string name="correctOpenCv">Como deseja corrigir sua prova?</string>
    <string name="buttonNext"> Próximo </string>
    <string name="button_continue">Continuar</string>
    <string name="NotaDetails">Peso </string>
    <string name="descriptionDetails">Detalhes</string>
    <string name="time">00:00:00</string>
    <string name="editTextNomeExam">Informe o nome  da prova*</string>
    <string name="editTextExamNameDefault">Nome  da prova</string>
    <string name="textViewDataExam">Data da Prova</string>
    <string name="textViewQuantQuestions">Quant. de Questões</string>
    <string name="textViewQuantAlternatives">Quant. de Alternativas</string>
    <string name="descriptionQuestion">Questão </string>
    <string name="titleAnswerKey">Gabarito </string>
    <string name="buttonData">Selecionar Data</string>
    <string name="txtViewDate">Data: %1$s</string>
    <string name="Nota"> Nota </string>
    <string name="txtViewGradeAll">Nota:</string>
    <string name="txtViewGradeReceived">Nota: %1$.2f</string>
    <string name="txtViewGradeAllNumber">1.0</string>
    <string name="buttonNotGradeAll">Atribuir notas individuais</string>
    <string name="buttonYesGradeAll">Confirmar nota</string>
    <string name="btnGenerateReport">Gerar Relatório</string>
    <string name="txtHits">Acertos</string>
    <string name="txtErros">Erros</string>
    <string name="txtCorrectAnswers">Acertos: %1$d</string>
    <string name="txtMistakes">Erros: %1$d</string>
    <string name="descriptionMarked">Marcada </string>
    <string name="btnFinish">Encerrar</string>
    <string name="descriptionCorrect">CERTA</string>
    <string name="descriptionIncorrect">ERRADA</string>
    <string name="descriptionView">Ver</string>
    <string name="textExamRegister">provas cadastradas</string>
    <string name="titleCorrectionFinish">Correção Finalizada</string>
    <string name="descriptionRegister">cadastrada</string>
    <string name="descriptionInTheRegister">no cadastro</string>
    <string name="descriptionChanged">alterada</string>
    <string name="descriptionInTheChanged">na alteração</string>
    <string name="titleDialogSuccessExam">Prova %1$s com sucesso</string>
    <string name="titleDialogSuccessAnswerKey">Gabarito preenchido</string>
    <string name="titleCorrected">Correções</string>
    <string name="titleDialogReport">Relatório Gerado</string>
    <string name="titleDialogTypeReport">Deseja gerar o relatório de correção de:</string>
    <string name="itemAllStudentsReport">Todos os alunos</string>
    <string name="itemWithCorrection">Somente de alunos com prova corrigida</string>
    <string name="optionsEditOrDelete">Deseja excluir ou editar esta prova?</string>
    <string name="titleGradedExam">Prova Corrigida</string>
    <string name="titleGrading">Corrigindo</string>
    <string name="descGradeTotalCard">Peso total da prova</string>
    <string name="descGradeStudentCard">Nota do Aluno</string>
    <string name="descNameStudentCard">Nome do Aluno</string>
    <string name="descVersionKaritiCard">Gerado por: Kariti v.%1$s</string>
    <string name="descObsAttentionCard">ATENÇÃO: Não rasure este cartão</string>
    <string name="descObsOrientation">Preencha os circulos completamente desta forma -> </string>
    <string name="editGradeTotal">Notas</string>
    <string name="descricioniconwelcome">Icone Welcome</string>
    <string name="iconeVoltar">Botão de Voltar</string>
    <string name="btnHome">Button Home</string>
    <string name="btnMenuPontos">Button Menu</string>
    <string name="iconeMenuPontos">Icone de Menu</string>
    <string name="imgProfessor">Imagem Professor</string>
    <string name="imgBtnSeta">Icone Seta Prox</string>
    <string name="imgDelete">Botão de Deletar</string>
    <string name="descritionScroll">Bloco do Gabarito</string>
    <string name="iconeTurma">Icone de Turma</string>
    <string name="iconeSearch">Icone de Pesquisa</string>
    <string name="iconeAluno">Icone de Aluno</string>
    <string name="iconeProva">Icone de Prova</string>
    <string name="txtViewNotaTotal">Nota total da prova: %1$.2f pontos.</string>
    <string name="txtViewGradeAllDescription">Caso deseje atribuir a mesma nota para todas as questões dessa prova. Informe a nota no campo abaixo e confirme!</string>
    <string name="descriptionOverlayLogin">Estamos cadastrando alguns dados para facilitar sua navegação no Kariti. Não saia do aplicativo.\n\n
        Por favor, aguarde…
    </string>
</resources>