<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tituloDialog"
        style="@style/COLORTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/txtViewGradeAllDescription"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextGradeAll"
        style="@style/COLORTEXTINSERT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="organization"
        android:hint="@string/txtViewGradeAllNumber"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/txtViewGradeExam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloDialog" />

    <Button
        android:id="@+id/buttonYesGradeAll"
        style="@style/BUTTONSTYLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonYesGradeAll"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNotGradeAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNotGradeAll"
        style="@style/BUTTONSTYLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonNotGradeAll"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGradeAllDesc"
        style="@style/COLORTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txtViewGradeAll"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextGradeAll"
        app:layout_constraintEnd_toStartOf="@+id/editTextGradeAll"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextGradeAll"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/txtViewGradeExam"
        style="@style/COLORTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtViewNotaTotal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonYesGradeAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>