<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_night"
    tools:context="online.padev.kariti.activitys.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="18dp">

    <TextView
        android:id="@+id/textView6"
        style="@style/COLORTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_your_password_description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenha"
        app:layout_constraintEnd_toEndOf="@+id/editTextSenha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSenha"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imgProfessor"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teacher" />

    <TextView
        android:id="@+id/textView5"
        style="@style/COLORTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_your_login_description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextLogin"
        style="@style/COLORTEXTINSERT"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:ems="15"
        android:hint="@string/user_email_obg"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextSenha"
        style="@style/COLORTEXTINSERT"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/senhahint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonEntrarL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <ImageButton
        android:id="@+id/senhaoculta"
        style="@style/ICONSENHA"
        android:layout_width="43dp"
        android:layout_height="34dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/password_login"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSenha"
        app:layout_constraintEnd_toEndOf="@+id/editTextSenha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSenha"
        app:layout_constraintTop_toTopOf="@+id/editTextSenha"
        app:srcCompat="@mipmap/senhaoff"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonEntrarL"
        style="@style/BUTTONSTYLE"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/enter_description"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrarL">

        <TextView
            android:id="@+id/textViewCriarConta"
            style="@style/COLORTXTCLICK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/create_account_description"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEntrarL" />

        <Button
            android:id="@+id/buttonEsqueciSenhaL"
            style="@style/COLORTXTCLICK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="@color/tranparente"
            android:text="@string/forgot_password_description"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCriarConta"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <View
            android:id="@+id/overlayViewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA000000"
            android:visibility="gone" />

        <TextView
            android:id="@+id/descriptionOverLayLogin"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionOverlayLogin"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"/>



        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loadingIdLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/loading"
            android:visibility="gone" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>