<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myToolBarMenuHamburg"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    style="@style/BARRASPRINCIPAIS"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        style="@style/BARRASPRINCIPAIS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBtnVoltarDados"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/tranparente"
            android:contentDescription="@string/iconeVoltar"
            android:src="@mipmap/setaleft"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/toolbar_titlePopUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/app_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/iconeMenuPontos"
            android:onClick="PopMenu"
            android:padding="8dp"
            android:src="@mipmap/menuptn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>